<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AppMovil</string>
    <string name="button_income">AGREGAR INGRESO</string>
    <string name="button_expenditure">AGREGAR EGRESO</string>
    <string name="button_accounts_receivable">CUENTAS POR COBRAR</string>
    <string name="button_accounts_payable">CUENTAS POR PAGAR</string>
    <string name="button_balance">BALANCE</string>
    <string name="button_add">AGREGAR</string>
    <string name="textView_account_concept">CONCEPTO:</string>
    <string name="textView_value">VALOR:</string>
    <string name="textView_deadline">FECHA LIMITE:</string>
    <string name="textView_debtor_data">DATOS DEUDOR:</string>
    <string name="textView_accreditor_data">DATOS ACREDOR:</string>
    <string name="textView_name">NOMBRE:</string>
    <string name="textView_id">No° ID:</string>
    <string name="textView_phone_number">No° TELEFONO:</string>
    <string name="textView_date">FECHA:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textView_search">BUSCAR POR ID</string>
    <string name="textView_list_by">LISTAR POR:</string>
    <string name="textView_sort_by">ORDENAR POR:</string>
    <string name="button_search">BUSCAR</string>
    <string name="lobby_summary">RESUMEN</string>
    <string name="lobby_income">Ingresos</string>
    <string name="lobby_expenditure">Gastos</string>
    <string name="lobby_utility">Utilidades</string>
    <string-array name="array_List_By">
        <item>Ingreso</item>
        <item>Egreso</item>
        <item>Cuentas por pagar</item>
        <item>Cuentas por cobrar</item>
    </string-array>
    <string-array name="array_Sort_By">
        <item>ID</item>
        <item>Fecha</item>
        <item>Mayor a menor</item>
    </string-array>
    <string name="add_income_screen">AGREGAR INGRESO</string>
    <string name="add_expenditure_screen">AGREGAR EGRESO</string>
    <string name="balance_screen">BALANCE</string>
    <string name="add_accounts_receivable_screen">CUENTAS POR COBRAR</string>
    <string name="add_accounts_payable_screen">CUENTAS POR PAGAR</string>
    <string name="id">ID</string>
</resources>