<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityBalance">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView13"
                app:srcCompat="@drawable/ic_baseline_list_24" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/textView_list_by"
                app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="@+id/imageView11" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView13"
                app:layout_constraintTop_toTopOf="@+id/textView13" />

            <Spinner
                android:id="@+id/spinnerList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:entries="@array/array_List_By"
                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView13"
                app:layout_constraintTop_toTopOf="@+id/textView13" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView11"
                app:srcCompat="@drawable/ic_baseline_sort_24" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/textView_sort_by"
                app:layout_constraintBottom_toBottomOf="@+id/imageView12"
                app:layout_constraintStart_toEndOf="@+id/imageView12"
                app:layout_constraintTop_toTopOf="@+id/imageView12" />

            <Spinner
                android:id="@+id/spinnerSort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:entries="@array/array_Sort_By"
                app:layout_constraintBottom_toBottomOf="@+id/textView15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toTopOf="@+id/textView15" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_manage_search_24" />

            <EditText
                android:id="@+id/TextBalanceID"
                android:layout_width="146dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/textView_search"
                android:inputType="number"
                app:layout_constraintStart_toEndOf="@+id/imageView13"
                app:layout_constraintTop_toTopOf="@+id/imageView13" />

            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/button_search"
                app:layout_constraintBottom_toBottomOf="@+id/TextBalanceID"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/TextBalanceID"
                app:layout_constraintTop_toTopOf="@+id/TextBalanceID"
                app:layout_constraintVertical_bias="1.0" />


            <ScrollView
                android:id="@+id/scrollView3"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableRow"
                tools:ignore="MissingConstraints">

                <TableLayout
                    android:id="@+id/tlBalance"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:isScrollContainer="true"
                    android:scrollbars="vertical">

                </TableLayout>
            </ScrollView>

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="BORRAR"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerSort"
                android:background="#128675">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.07"
                    android:text="@string/id"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/textView_date"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:text="@string/textView_account_concept"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.11"
                    android:text="@string/textView_value"
                    android:textColor="#000000" />
            </TableRow>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>